fixes alignment to image
SRFCMSAL-1706

--- a/source/_patterns/10-atoms/text/teaser-info.scss
+++ b/source/_patterns/10-atoms/text/teaser-info.scss
@@ -16,6 +16,7 @@
 
 .teaser-info-innerwrapper {
   line-height: 1;
+  margin-bottom: -3px;
 }
 
 .teaser-info {
